--- a/equipos/cadiz/amarillas.html
+++ b/equipos/cadiz/amarillas.html
@@ -35,8 +35,8 @@
                         <ul class="dropdown-menu" aria-labelledby="dropdown03">
                             <li><a class="dropdown-item" href="partidosJugados.html">Partidos Jugados</a></li>
                             <li><a class="dropdown-item" href="goles.html">Goles</a></li>
-                            <li><a class="dropdown-item" href="asistencias.html">Asistencias</a></li>
-                            <li><a class="dropdown-item" href="amarillas.html">Tarjetas amarillas</a></li>
+                            <li><a class="dropdown-item" href="amarillas.html">Asistencias</a></li>
+                            <li><a class="dropdown-item" href="asistencias.html">Tarjetas amarillas</a></li>
                             <li><a class="dropdown-item" href="rojas.html">Tarjetas rojas</a></li>
                             <li><a class="dropdown-item" href="temporadas.html">Temporadas en el club</a></li>
                         </ul>
