--- a/equipos/athleticClub/amarillas.html
+++ b/equipos/athleticClub/amarillas.html
@@ -16,10 +16,6 @@
 </head>
 
 <body>
-
-    <div class="container marketing">
-
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
             <img src="../../img/alaves.png" alt="" width="40px">
@@ -55,31 +51,12 @@
         </div>
     </nav>
 
-    <div id="formulario"></div>
+    <div id="formulario">
+
+    </div>
+
 
     <div class="container marketing">
-
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorBilbao.png">
-                </img>
-
-                <h2>Ernesto Valverde</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
-
-        <!-- PORTEROS -->
 
         <h1 class="mt-5">PORTEROS</h1>
         <hr class="mb-5">
@@ -91,16 +68,16 @@
                 </img>
 
                 <h2>Unai Simon</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/julenAgirrezabala.png">
                 </img>
 
                 <h2>Julen Agirrezalaba</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -117,24 +94,24 @@
                 </img>
 
                 <h2>Dani Vivian</h2>
-                <h5>5 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/aitorParedes.png">
                 </img>
 
                 <h2>Aitor Paredes</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa Central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/yerayAlvarez.png">
                 </img>
 
                 <h2>Yeray Álvarez</h2>
-                <h5>3 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -148,24 +125,24 @@
                 </img>
 
                 <h2>Iñigo Lekue</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/yuriBerchiche.png">
                 </img>
 
                 <h2>Yuri Berchiche</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/oscarDeMarcos.png">
                 </img>
 
                 <h2>Óscar De Marcos</h2>
-                <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -176,8 +153,8 @@
                 </img>
 
                 <h2>Imanol García de Albéniz</h2>
-                <h5>1 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -185,8 +162,8 @@
                 </img>
 
                 <h2>Beñat prados</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -204,25 +181,25 @@
                 </img>
 
                 <h2>Mikel Vesga</h2>
-                <h5>8 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro defensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/oihanSancet.png">
                 </img>
 
                 <h2>Oihan Sancet</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro ofensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/daniGarcia.png">
                 </img>
 
                 <h2>Dani García</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
-                </div><!-- /.col-lg-4 -->
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
 
 
 
@@ -235,16 +212,16 @@
                 </img>
 
                 <h2>Íñigo Ruíz de Galarreta</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/anderHerrera.png">
                 </img>
 
                 <h2>Ander Herrera</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -252,8 +229,8 @@
                 </img>
 
                 <h2>Raúl García</h2>
-                <h5>9 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro ofensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -261,8 +238,8 @@
                 </img>
 
                 <h2>Unai Gómez</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Mediocentro ofensivo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -281,24 +258,24 @@
                 </img>
 
                 <h2>Alex Berenguer</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/iñakiWilliams.png">
                 </img>
 
                 <h2>Iñaki Williams</h2>
-                <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/ikerMuniain.png">
                 </img>
 
                 <h2>Iker Muniain</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -312,24 +289,24 @@
                 </img>
 
                 <h2>Nico Williams</h2>
-                <h5>5 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/gorkaGuruzeta.png">
                 </img>
 
                 <h2>Gorka Guruzeta</h2>
-                <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/asierVillalibre.png">
                 </img>
 
                 <h2>Asier Villalibre</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Delantero Centro</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -337,10 +314,12 @@
                 </img>
 
                 <h2>Malcum Adu</h2>
-                <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
+
+    </div>
 
     <script>
 
@@ -377,9 +356,9 @@
                 let nuevosPartidos = e.target.parentNode.querySelector('h5');
                 let boton = formulario.querySelector('button');
 
-                boton.addEventListener('click', cambiarNumeroPartidos)
+                boton.addEventListener('click', cambiarNumeroAmarillas)
 
-                function cambiarNumeroPartidos(e){
+                function cambiarNumeroAmarillas(e){
                     let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
                     nuevosPartidos.innerHTML = `
                     ${numeroPartidosNuevo} amarillas
