--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 
 
-
+    
 
 
 
@@ -307,7 +307,11 @@
 
     <!-- footer -->
 
-
+    <div class="bg-success mt-5">
+        <footer class="py-3">
+            <p class="text-center text-white mt-3">&copy; INFOFUTBOL</p>
+        </footer>
+    </div>
 
 
 </body>
